[package]
name = "tx_event"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
alloy = { version = "0.2.1", features = [
    "full",
    "node-bindings",
    "rpc-types-debug",
    "rpc-types-trace",
    "json-rpc",
    "rpc-client",
    "signer-aws",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }
tokio = { version = "1.39.2", features = ["full"] } # For hex decoding
eyre = "0.6.12"
url = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
